# news-django

./: .env.sample  .gitignore  manage.py  package.json  pyproject.toml  readme.md
news_django/: admin.py  celery.py  forms.py  models.py  settings.py  tasks.py  urls.py  views.py  wsgi.py
news_django/migrations/: 0001_initial.py  0002_new_newcomment.py  0003_auto_20191209_1714.py  0004_auto_20191209_2016.py
news_django/templates/: add.html  details.html  homepage.html  index.html  registration.html
news_django/templates/registration/: login.html
