[tool.poetry]
name = "news_django"
version = "0.1.0"
description = ""
authors = ["Alex <slicer256@gmail.com>"]

[tool.poetry.dependencies]
python = "3.6.5"
django = "^3.0"
bootstrap4 = "^0.1.0"
django-bootstrap4 = "^1.1"
requests = "^2.22"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
